--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,6 +20,7 @@
 @import "blocks/title";
 
 // Sections
+// @import "sections/home/advantages";
 @import "sections/about-us/advantages";
 @import "sections/about-us/contacts";
 @import "sections/about-us/contacts---form";
