--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -1,5 +1,5 @@
 <%
-var htmlTop = { title: "About us - Shopify Theme Layout" };
+var htmlTop = { title: "ArtTube" };
 var heading = { title: 'О НАС' };
 %>
 
@@ -7,12 +7,11 @@ var heading = { title: 'О НАС' };
 <%=_.template(require('./../includes/header.html').default)()%>
 
 <main>
-  <%=_.template(require('./../includes/heading.html').default)(heading)%>
-  <%=_.template(require('./../includes/about-us/advantages.html').default)()%>
-  <%=_.template(require('./../includes/about-us/tagline.html').default)()%>
-  <%=_.template(require('./../includes/about-us/text-image.html').default)()%>
-  <%=_.template(require('./../includes/parallax-text.html').default)()%>
-  <%=_.template(require('./../includes/about-us/contacts.html').default)()%>
+  <%=_.template(require('./../includes/home/hero.html').default)()%>
+  <%=_.template(require('./../includes/home/events.html').default)()%>
+  <%=_.template(require('./../includes/home/blog.html').default)()%>
+  <%=_.template(require('./../includes/home/gallery.html').default)()%>
+  <%=_.template(require('./../includes/home/join.html').default)()%>
 </main>
 
 <%=_.template(require('./../includes/footer.html').default)()%>
