--- a/src/scss/blocks/title.scss
+++ b/src/scss/blocks/title.scss
@@ -1,25 +1,14 @@
-.title {
-  font-weight: 900;
-  margin-top: 0;
-  margin-bottom: 0;
-  word-break: break-word;
+.section-title {
+  font-weight: 400;
+  font-size: clamp(26px, 5vw, 42px);
+  line-height: 49.22px;
+  color: #100e0e;
 
   &:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
     font-family: var(--typography-fontFamily-headings);
   }
 
-  @include media-breakpoint-down(lg) {
-    font-size: pxToRem(24px);
-    line-height: pxToRem(26px);
-  }
-
-  @include media-breakpoint-between(lg, xxl) {
-    font-size: pxToRem(30px);
-    line-height: pxToRem(32px);
-  }
-
-  @include media-breakpoint-up(xxl) {
-    font-size: pxToRem(40px);
-    line-height: pxToRem(40px);
+  @include media-breakpoint-down(md) {
+    text-align: center;
   }
 }
