--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -17,19 +17,8 @@
 
   --border-radius: 5px;
 
-  --shadows-1: inset 0px -1px 0px #dadada;
-  --shadows-2: 0px 0px 1px rgba(0, 0, 0, 0.25), 0px 1px 1px rgba(0, 0, 0, 0.05);
-  --shadows-3: 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 2px 10px rgba(0, 0, 0, 0.1);
-  --shadows-4: 0px 0px 3px rgba(0, 0, 0, 0.1), 0px 4px 20px rgba(0, 0, 0, 0.15);
-  --shadows-5: 0px 0px 4px rgba(0, 0, 0, 0.1), 0px 8px 40px rgba(0, 0, 0, 0.2);
-
   --typography-htmlFontSize: 16px;
-  --typography-fontFamily: Comfortaa, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", "Noto Color Emoji";
-  --typography-fontFamily-headings: Montserrat, system-ui, -apple-system, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --typography-fontFamily: Roboto, sans-serif;
   --typography-fontWeightLight: 300;
   --typography-fontWeightMedium: 500;
   --typography-fontWeightBold: 700;
