--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,6 +20,7 @@
 @import "blocks/text-box";
 @import "blocks/title";
 @import "blocks/section";
+@import "blocks/custom-scroll";
 
 // Sections
 @import "sections/home";
