add section search

--- a/src/html/includes/blog.html
+++ b/src/html/includes/blog.html
@@ -78,7 +78,7 @@
     </article>
     <article class="blog__article">
       <h3 class="article__title">Александр Буренков о проекте «Сырое и приготовленное»</h3>
-      <p class="article__text">
+      <p class="article__text card-text--primary">
         «Мы придали новый импульс классической музейной экспозиции» До 17 января в Российском
         этнографическом музее можно увидеть выставку»
       </p>
