--- a/src/html/includes/events.html
+++ b/src/html/includes/events.html
@@ -1,4 +1,4 @@
-<div class="events custom-section">
+<section class="events custom-section">
   <h2 class="events__title section-title">Актуальные события</h2>
   <div class="events__cards">
     <div class="events__card">
@@ -133,4 +133,4 @@
     </div>
   </div>
   <button class="events__btn custom-btn">Смотреть ещё</button>
-</div>
+</section>
