--- a/src/html/includes/gallery.html
+++ b/src/html/includes/gallery.html
@@ -1,4 +1,4 @@
-<div class="gallery custom-section">
+<section class="gallery custom-section">
   <h2 class="gallery__title section-title">Галереи</h2>
   <div class="gallery__container">
     <div class="gallery__items custom-scroll">
@@ -24,4 +24,4 @@
       </picture>
     </div>
   </div>
-</div>
+</section>
