--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,15 +12,18 @@
 // Blocks
 @import "blocks/custom-btn";
 @import "blocks/buttons";
-@import "blocks/containers";
-@import "blocks/icons";
-@import "blocks/form-control";
-@import "blocks/form-check";
-@import "blocks/pagination";
-@import "blocks/text-box";
+// @import "blocks/containers";
+// @import "blocks/icons";
+// @import "blocks/form-control";
+// @import "blocks/form-check";
+// @import "blocks/pagination";
+// @import "blocks/text-box";
 @import "blocks/title";
 @import "blocks/section";
 @import "blocks/custom-scroll";
+
+@import "blocks/card-text";
+@import "blocks/card-title";
 
 // Sections
 @import "sections/home";
