--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -7,11 +7,12 @@ var heading = { title: 'О НАС' };
 <%=_.template(require('./../includes/header.html').default)()%>
 
 <main>
-  <%=_.template(require('./../includes/home/hero.html').default)()%>
-  <%=_.template(require('./../includes/home/events.html').default)()%>
-  <%=_.template(require('./../includes/home/blog.html').default)()%>
-  <%=_.template(require('./../includes/home/gallery.html').default)()%>
-  <%=_.template(require('./../includes/home/join.html').default)()%>
+  <%=_.template(require('./../includes/hero.html').default)()%>
+  <%=_.template(require('./../includes/events.html').default)()%>
+  <%=_.template(require('./../includes/blog.html').default)()%>
+  <%=_.template(require('./../includes/gallery.html').default)()%>
+  <%=_.template(require('./../includes/join.html').default)()%>
+  <%=_.template(require('./../includes/article.html').default)()%>
 </main>
 
 <%=_.template(require('./../includes/footer.html').default)()%>
