add section search

--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -1,21 +1,12 @@
 :root {
   --color-black: #000000;
   --color-light-black: #100e0e;
-  // --palette-primary-main: #d39b75;
-  // --palette-primary-light: #dab7a3;
-  // --palette-primary-text: #222;
-  // --palette-secondary-main: #21574a;
-  // --palette-secondary-light: #628272;
-  // --palette-secondary-text: #fff;
-  // --palette-tertiary-main: #9ca18d;
-  // --palette-tertiary-text: #222;
-  // --palette-text-primary: #222;
-  // --palette-text-secondary: #a6a6a6;
-  // --palette-text-disabled: #a6a6a6;
-  // --palette-background-paper: #f9f9f9;
-  // --palette-background-default: #fff;
-  // --palette-error-main: #f14336;
-  // --palette-success-main: #5ab654;
+  --color-border: #0000001A;
+  --color-orange: #ff711f
+
+  --color-svg-primary: var(--color-light-black);
+  --color-svg-secondary: var(--color-orange);
+
 
   --border-radius: 5px;
 
@@ -29,4 +20,9 @@
   --filters-opacity: 0.5;
 
   --spacing-container: 24px;
+
+}
+
+.svg-secondary {
+  color: var(--color-svg-secondary)
 }
