--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,6 +12,10 @@
 // Blocks
 @import "blocks/custom-btn";
 @import "blocks/buttons";
+@import "blocks/search-card";
+@import "blocks/filter";
+@import "blocks/banner";
+
 // @import "blocks/containers";
 // @import "blocks/icons";
 // @import "blocks/form-control";
