--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -1,6 +1,5 @@
 <%
 var htmlTop = { title: "ArtTube" };
-var heading = { title: 'О НАС' };
 %>
 
 <%=_.template(require('./../includes/_html-top.html').default)(htmlTop)%>
@@ -8,11 +7,12 @@ var heading = { title: 'О НАС' };
 
 <main>
   <%=_.template(require('./../includes/hero.html').default)()%>
+  <%=_.template(require('./../includes/banner.html').default)()%>
   <%=_.template(require('./../includes/events.html').default)()%>
   <%=_.template(require('./../includes/blog.html').default)()%>
   <%=_.template(require('./../includes/gallery.html').default)()%>
   <%=_.template(require('./../includes/join.html').default)()%>
-  <%=_.template(require('./../includes/article.html').default)()%>
+  <%=_.template(require('./../includes/search-events.html').default)()%>
 </main>
 
 <%=_.template(require('./../includes/footer.html').default)()%>
