--- a/src/scss/base/reboot.scss
+++ b/src/scss/base/reboot.scss
@@ -68,6 +68,14 @@ textarea {
     opacity: 0.5;
   }
 }
+img {
+  width: 100%;
+  height: 100%;
+}
+
+main {
+  background: #f5f5f5;
+}
 
 .spacing-top {
   @include media-breakpoint-down(xxl) {
