--- a/src/html/includes/banner.html
+++ b/src/html/includes/banner.html
@@ -1,5 +1,8 @@
-<div class="banner">
-  <div class="banner__container">
-    <p class="banner__content">AD Banner</p>
+<section class="advertising">
+  <!-- snippets banner -->
+  <div class="banner">
+    <div class="banner__container">
+      <p class="banner__content">AD Banner</p>
+    </div>
   </div>
-</div>
+</section>
