--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -4,6 +4,9 @@
   --color-border: #0000001A;
   --color-orange: #ff711f
 
+  --color-bg-100: #f5f5f5;
+  --color-bg-0: #ffffff;
+
   --color-svg-primary: var(--color-light-black);
   --color-svg-secondary: var(--color-orange);
 
