--- a/src/scss/blocks/banner.scss
+++ b/src/scss/blocks/banner.scss
@@ -1,6 +1,6 @@
 .banner {
   max-width: 100%;
-  background: #fff;
+  background: var(--color-bg-0, #ffffff);
   margin: 0 auto;
   height: 200px;
 
