--- a/src/scss/blocks/card-text.scss
+++ b/src/scss/blocks/card-text.scss
@@ -1,15 +1,23 @@
 .card-text {
-  font-weight: 400;
-  line-height: 23.4px;
-  color: var(--color-black, #000000);
-  opacity: 50%;
-
   &--primary {
+    font-weight: 400;
+    line-height: 23.4px;
+    color: var(--color-black, #000000);
+    opacity: 50%;
+
     @include media-breakpoint-up(md) {
       font-size: 18px;
     }
     @include media-breakpoint-down(md) {
       font-size: 15px;
     }
+  }
+
+  &--secondary {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    color: var(--color-black, #000000);
+    opacity: 50%;
   }
 }
