--- a/src/scss/blocks/card-title.scss
+++ b/src/scss/blocks/card-title.scss
@@ -12,4 +12,10 @@
       line-height: 26px;
     }
   }
+  &--secondary {
+    font-weight: 500;
+    color: var(--color-light-black, #100e0e);
+    font-size: 24px;
+    line-height: 31.2px;
+  }
 }
