--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,7 @@
 @import "blocks/search-card";
 @import "blocks/filter";
 @import "blocks/banner";
+@import "blocks/search";
 
 // @import "blocks/containers";
 // @import "blocks/icons";
