--- a/src/html/includes/search-events.html
+++ b/src/html/includes/search-events.html
@@ -1,5 +1,22 @@
 <section class="search-events custom-section">
-  <div class="search-events__container">
+  <div class="search-events__map-link">
+    <svg
+      class="search-events__map-svg"
+      viewBox="0 0 24 21"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M15.7728 4.77228V20.045M1.45459 4.77228V20.045L8.13641 16.2268L15.7728 20.045L22.4546 16.2268V0.954102L15.7728 4.77228L8.13641 0.954102L1.45459 4.77228ZM8.13641 0.954102V16.2268V0.954102Z"
+        stroke="var(--color-orange)"
+        stroke-width="1.5"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
+    </svg>
+    <span class="search-events__map-text">Показать на карте</span>
+  </div>
+  <div class="search-events__content">
     <!-- snippets filter -->
     <div class="filter" id="filter">
       <div class="filter__quantity">Найдено 4 мероприятия</div>
