--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -12,6 +12,7 @@ var htmlTop = { title: "ArtTube" };
   <%=_.template(require('./../includes/blog.html').default)()%>
   <%=_.template(require('./../includes/gallery.html').default)()%>
   <%=_.template(require('./../includes/join.html').default)()%>
+  <%=_.template(require('./../includes/search.html').default)()%>
   <%=_.template(require('./../includes/search-events.html').default)()%>
 </main>
 
