--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -1,15 +1,18 @@
 :root {
   --color-black: #000000;
   --color-light-black: #100e0e;
-  --color-border: #0000001A;
-  --color-orange: #ff711f
+  --color-orange: #ff711f;
+
+  --color-border: #0000001a;
+
+  --color-text-900: #ffffff;
+  --color-btn: #ff711f;
 
   --color-bg-100: #f5f5f5;
   --color-bg-0: #ffffff;
 
   --color-svg-primary: var(--color-light-black);
   --color-svg-secondary: var(--color-orange);
-
 
   --border-radius: 5px;
 
@@ -23,9 +26,8 @@
   --filters-opacity: 0.5;
 
   --spacing-container: 24px;
-
 }
 
 .svg-secondary {
-  color: var(--color-svg-secondary)
+  color: var(--color-svg-secondary);
 }
