--- a/src/scss/blocks/custom-btn.scss
+++ b/src/scss/blocks/custom-btn.scss
@@ -1,5 +1,4 @@
 .custom-btn {
-  font-family: Roboto, sans-serif;
   display: block;
   width: 242px;
   height: 64px;
@@ -12,4 +11,20 @@
   background: #ff711f;
   border: none;
   padding: 0;
+
+  &-primary {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 1px;
+    padding: 0 30px;
+    height: 50px;
+    color: var(--color-text-900, #ffffff);
+    background: var(--color-btn, #ff711f);
+    border: none;
+
+    @include media-breakpoint-down(md) {
+      width: 100%;
+    }
+  }
 }
