--- a/src/scss/base/reboot.scss
+++ b/src/scss/base/reboot.scss
@@ -6,9 +6,14 @@ body {
   font-family: var(--typography-fontFamily);
   display: flex;
   flex-direction: column;
+  width: 100%;
   min-height: 100vh;
-  color: var(--palette-text-primary);
-  background-color: var(--palette-background-default);
+  background-color: var(--color-bg);
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .rub::after {
@@ -72,11 +77,6 @@ img {
   width: 100%;
   height: 100%;
 }
-
-main {
-  background: #f5f5f5;
-}
-
 .spacing-top {
   @include media-breakpoint-down(xxl) {
     padding-top: 40px;
