--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -3,13 +3,16 @@
   --color-light-black: #100e0e;
   --color-orange: #ff711f;
 
-  --color-border: #0000001a;
+  --color-border: #e0e0de;
 
   --color-text-900: #ffffff;
   --color-btn: #ff711f;
 
   --color-bg-100: #f5f5f5;
+  --color-bg: #f7f7f4;
+  --color-bg-50: #e0e0de;
   --color-bg-0: #ffffff;
+  --color-bg-700: #4d4d4d;
 
   --color-svg-primary: var(--color-light-black);
   --color-svg-secondary: var(--color-orange);
