--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -1,5 +1,6 @@
 <header class="header">
   <input type="checkbox" id="checkbox-menu" />
+  <input type="checkbox" id="checkbox-login" />
   <div class="header__inner">
     <div class="header__front">
       <a href="/" class="header__logo">
@@ -62,7 +63,7 @@
       </label>
     </div>
     <div class="header__menu">
-      <div class="header__buttons">
+      <div class="header__buttons-top">
         <a href="#" class="header__btn-language">
           <svg
             class="header__btn-language-icon"
@@ -89,7 +90,7 @@
           </svg>
           <span class="header__btn-language-text">RU</span>
         </a>
-        <a href="#" class="header__btn-login">
+        <label for="checkbox-login" class="header__btn-login">
           <svg
             class="header__btn-login-icon"
             width="24"
@@ -108,7 +109,7 @@
             />
           </svg>
           <span class="header__btn-login-text"> Войти </span>
-        </a>
+        </label>
       </div>
       <div class="header__nav">
         <div class="header__nav-links">
@@ -124,30 +125,61 @@
           <a href="#" class="header__nav-link">Контакты</a>
         </div>
       </div>
-      <a href="#" class="header__btn-location">
-        <svg
-          class="header__btn-location-icon"
-          viewBox="0 0 16 19"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M7.99961 10.292C9.32509 10.292 10.3996 9.22867 10.3996 7.91699C10.3996 6.60532 9.32509 5.54199 7.99961 5.54199C6.67413 5.54199 5.59961 6.60532 5.59961 7.91699C5.59961 9.22867 6.67413 10.292 7.99961 10.292Z"
-            stroke="#FF711F"
-            stroke-width="1.2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M7.99961 1.5835C6.30222 1.5835 4.67436 2.25076 3.47413 3.43849C2.27389 4.62622 1.59961 6.23712 1.59961 7.91683C1.59961 9.41466 1.92121 10.3947 2.79961 11.4793L7.99961 17.4168L13.1996 11.4793C14.078 10.3947 14.3996 9.41466 14.3996 7.91683C14.3996 6.23712 13.7253 4.62622 12.5251 3.43849C11.3249 2.25076 9.697 1.5835 7.99961 1.5835V1.5835Z"
-            stroke="#FF711F"
-            stroke-width="1.2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
-        <span class="header__btn-location-text">Москва</span>
-      </a>
+      <div class="header__login">
+        <form class="header__login-form">
+          <div class="header__login-inputs">
+            <input type="text" class="header__login-input" placeholder="Логин или email" />
+            <input type="password" class="header__login-input" placeholder="Пароль" />
+          </div>
+          <div class="header__login-networks">
+            <div class="header__login-network"></div>
+            <div class="header__login-network"></div>
+            <div class="header__login-network"></div>
+            <div class="header__login-network"></div>
+            <div class="header__login-network"></div>
+            <div class="header__login-network"></div>
+          </div>
+          <div class="header__login-buttons">
+            <button class="header__login-btn-login custom-btn" type="button">Войти</button>
+            <label class="header__login-remember">
+              <input type="checkbox" class="header__login-remember-checkbox" />
+              <span class="header__login-remember-text">Запомнить меня</span>
+            </label>
+          </div>
+          <div class="header__login-helper">
+            <a href="#" class="header__login-helper-text">Забыли пароль?</a>
+            <span class="header__login-helper-separator">/</span>
+            <a href="#" class="header__login-helper-text">Регистрация</a>
+          </div>
+        </form>
+      </div>
+      <div class="header__buttons-bottom">
+        <label for="checkbox-menu" class="header__btn-menu" type="button">Меню</label>
+        <a href="#" class="header__btn-location">
+          <svg
+            class="header__btn-location-icon"
+            viewBox="0 0 16 19"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M7.99961 10.292C9.32509 10.292 10.3996 9.22867 10.3996 7.91699C10.3996 6.60532 9.32509 5.54199 7.99961 5.54199C6.67413 5.54199 5.59961 6.60532 5.59961 7.91699C5.59961 9.22867 6.67413 10.292 7.99961 10.292Z"
+              stroke="#FF711F"
+              stroke-width="1.2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M7.99961 1.5835C6.30222 1.5835 4.67436 2.25076 3.47413 3.43849C2.27389 4.62622 1.59961 6.23712 1.59961 7.91683C1.59961 9.41466 1.92121 10.3947 2.79961 11.4793L7.99961 17.4168L13.1996 11.4793C14.078 10.3947 14.3996 9.41466 14.3996 7.91683C14.3996 6.23712 13.7253 4.62622 12.5251 3.43849C11.3249 2.25076 9.697 1.5835 7.99961 1.5835V1.5835Z"
+              stroke="#FF711F"
+              stroke-width="1.2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+          <span class="header__btn-location-text">Москва</span>
+        </a>
+      </div>
     </div>
   </div>
 </header>
