--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -14,6 +14,8 @@
   --color-bg-0: #ffffff;
   --color-bg-700: #4d4d4d;
 
+  --color-gray: #dbdbdb;
+
   --color-svg-primary: var(--color-light-black);
   --color-svg-secondary: var(--color-orange);
 
