--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -140,7 +140,7 @@
             <div class="header__login-network"></div>
           </div>
           <div class="header__login-buttons">
-            <button class="header__login-btn-login custom-btn" type="button">Войти</button>
+            <button class="header__login-btn-login custom-btn-primary" type="button">Войти</button>
             <label class="header__login-remember">
               <input type="checkbox" class="header__login-remember-checkbox" />
               <span class="header__login-remember-text">Запомнить меня</span>
