add section institution

--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -14,6 +14,8 @@ var htmlTop = { title: "ArtTube" };
   <%=_.template(require('./../includes/join.html').default)()%>
   <%=_.template(require('./../includes/search.html').default)()%>
   <%=_.template(require('./../includes/search-events.html').default)()%>
+  <%=_.template(require('./../includes/institution.html').default)()%>
+    <%=_.template(require('./../includes/event-detail.html').default)()%>
 </main>
 
 <%=_.template(require('./../includes/footer.html').default)()%>
