--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,6 +16,7 @@
 @import "blocks/filter";
 @import "blocks/banner";
 @import "blocks/search";
+@import "blocks/card-institution";
 
 // @import "blocks/containers";
 // @import "blocks/icons";
