--- a/src/scss/base/reboot.scss
+++ b/src/scss/base/reboot.scss
@@ -1,6 +1,9 @@
 :root {
   font-size: var(--typography-htmlFontSize);
 }
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: var(--typography-fontFamily);
@@ -36,7 +39,7 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
+  margin: 0;
 
   &:last-child {
     margin-bottom: 0;
