--- a/src/scss/blocks/title.scss
+++ b/src/scss/blocks/title.scss
@@ -4,11 +4,19 @@
   line-height: 49.22px;
   color: #100e0e;
 
-  &:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
-    font-family: var(--typography-fontFamily-headings);
+  @include media-breakpoint-up(xl) {
+    font-size: 42px;
   }
 
-  @include media-breakpoint-down(md) {
-    text-align: center;
+  @include media-breakpoint-between(sd, xl) {
+    font-size: 34px;
+  }
+
+  @include media-breakpoint-between(sm, md) {
+    font-size: 34px;
+  }
+
+  @include media-breakpoint-down(sm) {
+    font-size: 26px;
   }
 }
