add section event

--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -6,6 +6,7 @@
   --color-border: #e0e0de;
 
   --color-text-900: #ffffff;
+  --color-text-700: #333333;
   --color-btn: #ff711f;
 
   --color-bg-100: #f5f5f5;
