--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,12 +18,6 @@
 @import "blocks/search";
 @import "blocks/card-institution";
 
-// @import "blocks/containers";
-// @import "blocks/icons";
-// @import "blocks/form-control";
-// @import "blocks/form-check";
-// @import "blocks/pagination";
-// @import "blocks/text-box";
 @import "blocks/title";
 @import "blocks/section";
 @import "blocks/custom-scroll";
@@ -33,6 +27,7 @@
 
 // Sections
 @import "sections/home";
+@import "sections/event-detail";
 
 @import "sections/footer";
 @import "sections/header";
