--- a/src/scss/blocks/search-card.scss
+++ b/src/scss/blocks/search-card.scss
@@ -1,21 +1,26 @@
-// $size: 305px;
-
 .search-events__card {
   display: flex;
   border: 1px solid var(--color-border);
-  height: 100%;
 
   @include media-breakpoint-down(md) {
     flex-direction: column;
   }
 
-  .search-events__card-picture {
-    display: block;
-    min-width: 305px;
-    height: 100%;
+  .search-events__card-image {
+    flex: 1 0 auto;
+    width: 305px;
+    height: 305px;
+
+    @include media-breakpoint-down(md) {
+      width: 100%;
+      height: 100%;
+    }
+
+    source {
+      display: block;
+    }
 
     img {
-      display: block;
       object-fit: cover;
     }
   }
@@ -30,16 +35,25 @@
   }
 
   .search-events__card-title {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 31.2px;
+    color: var(--color-text-primary, #100e0e);
+
     @include media-breakpoint-up(md) {
       margin-bottom: 10px;
     }
+
     @include media-breakpoint-down(md) {
       margin-bottom: 15px;
     }
   }
 
   .search-events__card-text {
+    font-size: 18px;
+    line-height: 23.4px;
     margin-bottom: 30px;
+    color: var(--color-text-black-5);
   }
 
   .search-events__card-info {
@@ -59,37 +73,33 @@
   .search-events__card-date,
   .search-events__card-place {
     display: flex;
+    align-items: center;
     gap: 8px;
   }
 
   .search-events__card-date {
-    .search-events__card-svg {
-      color: var(--color-light-black, #100e0e);
-    }
-
-    .search-events__card-description {
-      color: var(--color-light-black, #100e0e);
-    }
+    color: var(--color-text-primary, #100e0e);
+  }
+  .search-events__card-date-icon {
+    width: 17px;
+    height: 17px;
+    color: var(--icon-primary-color);
   }
 
   .search-events__card-place {
-    fill: var(--orange, #ff711f);
-    .search-events__card-svg {
-      color: var(--orange, #ff711f);
-    }
-    .search-events__card-description {
-      color: var(--orange, #ff711f);
-    }
+    color: var(--color-text-secondary, #ff711f);
+  }
+  .search-events__card-place-icon {
+    width: 16px;
+    height: 19px;
+    color: var(--icon-secondary-color);
   }
 
-  .search-events__card-svg {
-    width: 17px;
-    height: 17px;
-  }
-
-  .search-events__card-date-text {
+  .search-events__card-date-text,
+  .search-events__card-place-text {
     font-size: 18px;
     line-height: 12.6px;
+    color: inherit;
   }
 
   .search-events__card-grades {
@@ -97,22 +107,23 @@
     gap: 15px;
     padding-top: 20px;
     border-top: 1px solid var(--color-border);
+  }
 
-    .search-events__card-grade {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
+  .search-events__card-grade {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    color: var(--color-text-3, #100e0e4d);
+  }
 
-    .search-events__card-grade-svg {
-      width: 22px;
-      height: 22px;
-      fill: var(--color-border);
-    }
+  .search-events__card-grade-icon {
+    width: 22px;
+    height: 22px;
+    color: var(--icon-third-color);
+  }
 
-    .search-events__card-grade-text {
-      line-height: 11.2px;
-      color: var(--color-border);
-    }
+  .search-events__card-grade-text {
+    line-height: 11.2px;
+    color: inherit;
   }
 }
