--- a/src/html/includes/institution.html
+++ b/src/html/includes/institution.html
@@ -1,7 +1,7 @@
 <section class="institution custom-section">
   <h2 class="institution__title section-title">447 заведений</h2>
   <div class="institution__cards">
-    <!-- card-institution -->
+    <!-- snippets card-institution -->
     <div class="card-institution">
       <div class="card-institution__image">
         <picture class="card-institution__picture">
@@ -77,7 +77,7 @@
               <g>
                 <path
                   d="M6.33333 21H1V10.7692H6.33333V21ZM6.33333 10.7692L9 5.65385V2H11C11.5304 2 12.0391 2.23097 12.4142 2.64211C12.7893 3.05325 13 3.61087 13 4.19231V9.30769H19C19.5304 9.30769 20.0391 9.53867 20.4142 9.9498C20.7893 10.3609 21 10.9186 21 11.5V14.4231L18.8613 19.6978C18.7042 20.0854 18.4479 20.4148 18.1234 20.6459C17.799 20.8771 17.4203 21.0001 17.0333 21H6.33333V10.7692Z"
-                  stroke="#000"
+                  stroke="var(--icon-primary-color, currentColor)"
                   stroke-width="1.5"
                   stroke-miterlimit="10"
                   stroke-linecap="round"
