--- a/src/html/includes/search-events.html
+++ b/src/html/includes/search-events.html
@@ -1,19 +1,17 @@
 <section class="search-events custom-section">
   <div class="search-events__map-link">
-    <svg
-      class="search-events__map-svg"
-      viewBox="0 0 24 21"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        d="M15.7728 4.77228V20.045M1.45459 4.77228V20.045L8.13641 16.2268L15.7728 20.045L22.4546 16.2268V0.954102L15.7728 4.77228L8.13641 0.954102L1.45459 4.77228ZM8.13641 0.954102V16.2268V0.954102Z"
-        stroke="var(--color-orange)"
-        stroke-width="1.5"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      />
-    </svg>
+    <div class="search-events__map-icon">
+      <!-- snippets icon_map -->
+      <svg viewBox="0 0 24 21" fill="none">
+        <path
+          d="M15.7728 4.77228V20.045M1.45459 4.77228V20.045L8.13641 16.2268L15.7728 20.045L22.4546 16.2268V0.954102L15.7728 4.77228L8.13641 0.954102L1.45459 4.77228ZM8.13641 0.954102V16.2268V0.954102Z"
+          stroke="currentColor"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+    </div>
     <span class="search-events__map-text">Показать на карте</span>
   </div>
   <div class="search-events__content">
@@ -115,7 +113,7 @@
             <div class="search-events__card-date">
               <div class="search-events__card-date-icon">
                 <!-- snippets icon_calendar -->
-                <svg viewBox="0 0 17 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <svg viewBox="0 0 17 17" fill="currentColor">
                   <path d="M5.66654 1.1333H4.5332V4.5333H5.66654V1.1333Z" fill="currentColor" />
                   <path d="M12.4663 1.1333H11.333V4.5333H12.4663V1.1333Z" fill="currentColor" />
                   <path
@@ -139,11 +137,10 @@
               </div>
               <p class="search-events__card-date-text">12 февраля 2022 – 2 апреля 2022</p>
             </div>
-
             <div class="search-events__card-place">
               <div class="search-events__card-place-icon">
-                <!-- snippets icon_like -->
-                <svg viewBox="0 0 16 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- snippets icon_location -->
+                <svg viewBox="0 0 16 19" fill="none">
                   <path
                     d="M7.99961 10.292C9.32509 10.292 10.3996 9.22867 10.3996 7.91699C10.3996 6.60532 9.32509 5.54199 7.99961 5.54199C6.67413 5.54199 5.59961 6.60532 5.59961 7.91699C5.59961 9.22867 6.67413 10.292 7.99961 10.292Z"
                     stroke="currentColor"
@@ -166,7 +163,7 @@
           <div class="search-events__card-grades">
             <div class="search-events__card-grade">
               <div class="search-events__card-grade-icon">
-                <svg viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg viewBox="0 0 22 22" fill="none">
                   <g>
                     <path
                       d="M11 3.66667C9.33036 3.66667 7.76916 3.96832 6.31641 4.57161C4.86365 5.17491 3.70964 5.98872 2.85435 7.01302C1.99907 8.03733 1.57143 9.1441 1.57143 10.3333C1.57143 11.3056 1.86403 12.2322 2.44922 13.1133C3.03441 13.9944 3.859 14.7561 4.92299 15.3984L5.99107 16.0495L5.6596 17.2995C5.46317 18.0894 5.17671 18.8359 4.80022 19.5391C6.04427 18.9922 7.16964 18.25 8.17634 17.3125L8.70424 16.8177L9.40402 16.8958C9.96875 16.9653 10.5007 17 11 17C12.6696 17 14.2308 16.6983 15.6836 16.0951C17.1363 15.4918 18.2904 14.678 19.1456 13.6536C20.0009 12.6293 20.4286 11.5226 20.4286 10.3333C20.4286 9.1441 20.0009 8.03733 19.1456 7.01302C18.2904 5.98872 17.1363 5.17491 15.6836 4.57161C14.2308 3.96832 12.6696 3.66667 11 3.66667ZM22 10.3333C22 11.8438 21.5089 13.2391 20.5268 14.5195C19.5446 15.7999 18.2106 16.8112 16.5246 17.5534C14.8385 18.2956 12.997 18.6667 11 18.6667C10.4271 18.6667 9.8337 18.6319 9.21987 18.5625C7.59933 20.0816 5.71689 21.1319 3.57254 21.7135C3.1715 21.8351 2.70499 21.9306 2.17299 22H2.11161C1.98884 22 1.87835 21.9544 1.78013 21.8633C1.68192 21.7721 1.61644 21.6528 1.58371 21.5052V21.4922C1.55915 21.4575 1.55711 21.4054 1.57757 21.3359C1.59803 21.2665 1.60621 21.2231 1.60212 21.2057C1.59803 21.1884 1.61644 21.1471 1.65737 21.082L1.73103 20.9648L1.81696 20.8542L1.91518 20.737C1.97247 20.6675 2.09933 20.5178 2.29576 20.2878C2.49219 20.0577 2.63337 19.8928 2.71931 19.793C2.80525 19.6931 2.93211 19.5217 3.09989 19.2786C3.26767 19.0356 3.40067 18.8142 3.49888 18.6146C3.5971 18.4149 3.70759 18.1589 3.83036 17.8464C3.95312 17.5339 4.05952 17.204 4.14955 16.8568C2.86458 16.0842 1.85175 15.1293 1.11105 13.9922C0.37035 12.855 0 11.6354 0 10.3333C0 8.82292 0.491071 7.42752 1.47321 6.14714C2.45536 4.86675 3.78943 3.85547 5.47545 3.11328C7.16146 2.37109 9.00298 2 11 2C12.997 2 14.8385 2.37109 16.5246 3.11328C18.2106 3.85547 19.5446 4.86675 20.5268 6.14714C21.5089 7.42752 22 8.82292 22 10.3333Z"
@@ -179,7 +176,7 @@
             </div>
             <div class="search-events__card-grade">
               <div class="search-events__card-grade-icon">
-                <svg viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg viewBox="0 0 22 22" fill="none">
                   <g>
                     <path
                       d="M6.33333 21H1V10.7692H6.33333V21ZM6.33333 10.7692L9 5.65385V2H11C11.5304 2 12.0391 2.23097 12.4142 2.64211C12.7893 3.05325 13 3.61087 13 4.19231V9.30769H19C19.5304 9.30769 20.0391 9.53867 20.4142 9.9498C20.7893 10.3609 21 10.9186 21 11.5V14.4231L18.8613 19.6978C18.7042 20.0854 18.4479 20.4148 18.1234 20.6459C17.799 20.8771 17.4203 21.0001 17.0333 21H6.33333V10.7692Z"
@@ -196,7 +193,7 @@
             </div>
             <div class="search-events__card-grade">
               <div class="search-events__card-grade-icon">
-                <svg viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg viewBox="0 0 22 22" fill="none">
                   <g>
                     <path
                       d="M6.72968 12.8551C6.58145 12.7889 6.42825 12.7433 6.27262 12.7187C5.04838 12.5257 3.9351 13.6544 3.78603 15.2397L3.30987 20.3037H18.69L18.2138 15.2397C18.1949 15.0382 18.1596 14.8398 18.1086 14.6478C17.7071 13.1378 16.4363 12.3351 15.2702 12.8551C13.9363 13.4498 12.511 13.7458 10.9999 13.7458C9.48883 13.7458 8.06352 13.4498 6.72968 12.8551ZM10.9999 12.0496C12.3688 12.0496 13.6501 11.7834 14.8437 11.2512C16.6938 10.4263 18.7101 11.6997 19.3471 14.0956C19.4281 14.4002 19.484 14.7149 19.5141 15.0347L19.9903 20.0987C20.0777 21.0287 19.5664 21.8743 18.8483 21.9876C18.7958 21.9958 18.7429 22 18.69 22H3.30987C2.58645 22 2 21.2406 2 20.3037C2 20.2352 2.00321 20.1667 2.0096 20.0987L2.48576 15.0347C2.72228 12.5194 4.48859 10.7286 6.43094 11.0349C6.67786 11.0738 6.92093 11.1463 7.15612 11.2512C8.34981 11.7834 9.63108 12.0496 10.9999 12.0496Z"
