--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -8,7 +8,7 @@ var htmlTop = { title: "ArtTube" };
 <main>
   <%=_.template(require('./../includes/hero.html').default)()%>
   <%=_.template(require('./../includes/banner.html').default)()%>
-  <%=_.template(require('./../includes/events.html').default)()%>
+  <%=_.template(require('./../includes/current_events.html').default)()%>
   <%=_.template(require('./../includes/blog.html').default)()%>
   <%=_.template(require('./../includes/gallery.html').default)()%>
   <%=_.template(require('./../includes/join.html').default)()%>
