--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -3,15 +3,15 @@
     padding: 0;
   }
 
-  @include media-breakpoint-between(sm, md) {
-    padding: 0 clamp(0px, 6.5vw, 50px);
+  @include media-breakpoint-between(sm, xl) {
+    padding: 0 50px;
   }
 
-  @include media-breakpoint-between(md, xl) {
-    padding: 0 clamp(50px, 6.5vw, 85px);
-  }
+  // @include media-breakpoint-between(md, xl) {
+  //   padding: 0 85px;
+  // }
 
   @include media-breakpoint-up(xl) {
-    padding: 0 clamp(85px, 6.5vw, 100px);
+    padding: 0 100px;
   }
 }
