--- a/src/scss/sections/event-detail.scss
+++ b/src/scss/sections/event-detail.scss
@@ -18,26 +18,35 @@
     border: 1px solid var(--color-border);
     background: var(--color-bg-0);
 
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(lg) {
       flex-direction: column;
     }
   }
 
   .event-full__info {
+    flex: 100%;
   }
 
   .event-full__image {
-    max-width: 400px;
-    max-width: 400px;
     width: 100%;
     height: 100%;
     margin: 0 auto;
 
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(lg) {
+      min-width: 400px;
+      max-height: 400px;
+      margin-bottom: 40px;
+    }
+
+    @include media-breakpoint-between(sm, lg) {
+      width: 400px;
+      height: 400px;
       margin-bottom: 40px;
     }
 
     @include media-breakpoint-down(sm) {
+      max-width: 400px;
+      max-height: 400px;
       margin-bottom: 25px;
     }
 
