--- a/src/scss/sections/home.scss
+++ b/src/scss/sections/home.scss
@@ -3,13 +3,14 @@
   height: 700px;
   position: relative;
 
-  .hero__content {
+  &__content {
     position: relative;
     z-index: 2;
     height: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
+    color: var(--color-text-900);
 
     @include media-breakpoint-up(sm) {
       justify-content: center;
@@ -25,10 +26,10 @@
     }
   }
 
-  .hero__title {
+  &__title {
     text-transform: uppercase;
     font-weight: 400;
-    color: white;
+    color: inherit;
     margin: 0;
 
     @include media-breakpoint-up(md) {
@@ -47,26 +48,22 @@
     }
   }
 
-  .hero__text {
+  &__text {
     font-size: 24px;
     line-height: 28.13px;
-    color: white;
+    color: inherit;
   }
 
-  .hero__picture {
+  &__picture {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: contain;
-  }
 
-  .hero__picture {
     img {
       object-fit: cover;
-      width: 100%;
-      height: 100%;
     }
   }
 }
@@ -85,101 +82,39 @@
   }
 }
 
-.events {
-  .events__title {
+.current-events {
+  &__title {
     margin-bottom: clamp(30px, 5vw, 60px);
   }
 
-  .events__btn {
-    @include media-breakpoint-down(sm) {
-      max-width: calc(100% - 40px);
-      width: 100%;
-    }
-  }
-
-  .events__cards {
+  &__cards {
     display: grid;
     justify-content: center;
     justify-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 440px));
-    gap: clamp(20px, 3vw, 40px);
-    grid-auto-flow: dense;
     margin-bottom: clamp(30px, 3vw, 40px);
-  }
+    margin-bottom: 40px;
 
-  .events__card {
-    background: white;
-    border: 1px solid var(--color-border);
-  }
+    @include media-breakpoint-up(lg) {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 40px;
+    }
 
-  .card__picture {
-    display: block;
-    width: 100%;
-
-    @include media-breakpoint-up(md) {
-      height: 310px;
+    @include media-breakpoint-between(md, lg) {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
     }
 
     @include media-breakpoint-down(md) {
-      max-height: 265px;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 20px;
     }
   }
 
-  .card__picture {
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  .card__content {
+  &__btn {
+    margin: 0 auto;
     @include media-breakpoint-up(md) {
-      padding: 20px 20px 25px;
+      max-width: 240px;
     }
-
-    @include media-breakpoint-down(md) {
-      padding: 20px 20px 25px;
-    }
-  }
-
-  .card__info {
-    margin-bottom: 23px;
-  }
-
-  .card__info-title {
-    font-weight: 500;
-    font-size: clamp(20px, 4vw, 24px);
-    margin-bottom: 22px;
-  }
-
-  .card__block {
-    display: flex;
-    align-items: center;
-    gap: 9px;
-  }
-
-  .card__block:not(:last-child) {
-    margin-bottom: 12px;
-  }
-  .card__block-svg {
-    width: 17px;
-    height: 17px;
-  }
-
-  .card__tags {
-    display: flex;
-    gap: 10px;
-  }
-
-  .card__tag {
-    font-family: inherit;
-    color: #ff711f;
-    border-radius: 180px;
-    line-height: 12.6px;
-    font-size: 18px;
-    padding: 10px 15px;
-    border: 1px solid #00000026;
-    background: white;
   }
 }
 
@@ -189,7 +124,7 @@
     padding-right: 20px;
   }
 
-  .blog__title-container {
+  &__title-container {
     display: flex;
     flex-wrap: wrap;
     column-gap: 50px;
@@ -208,19 +143,19 @@
     }
   }
 
-  .blog__title {
+  &__title {
     margin: 0;
   }
 
-  .blog__link-more {
+  &__link-more {
     text-transform: uppercase;
     font-weight: 500;
     font-size: clamp(15px, 3vw, 16px);
     line-height: 18.75px;
-    color: #ff711f;
+    color: var(--color-text-secondary);
   }
 
-  .blog__articles {
+  &__articles {
     display: flex;
     gap: 41px;
     justify-content: space-between;
@@ -235,7 +170,7 @@
     }
   }
 
-  .blog__article {
+  &__article {
     height: 100%;
     overflow: hidden;
 
@@ -291,11 +226,11 @@
 }
 
 .gallery {
-  .gallery__title {
+  &__title {
     margin-bottom: clamp(35px, 5vw, 60px);
   }
 
-  .gallery__container {
+  &__container {
     overflow: visible;
     background: transparent;
 
@@ -305,27 +240,29 @@
     }
   }
 
-  .gallery__items {
+  &__items {
     display: flex;
     gap: clamp(20px, 5vw, 50px);
     justify-content: space-between;
     padding-bottom: 50px;
     overflow: auto;
+
+    &::-webkit-scrollbar {
+      margin: 50px;
+    }
   }
 
-  .gallery__items::-webkit-scrollbar {
-    margin: 50px;
-  }
-
-  .gallery__item {
+  &__item {
     @include media-breakpoint-up(md) {
       min-width: 240px;
       min-height: 240px;
     }
+
     @include media-breakpoint-down(md) {
       min-width: 139px;
       min-height: 139px;
     }
+
     img {
       object-fit: cover;
       width: 100%;
@@ -335,7 +272,7 @@
 }
 
 .join {
-  .join__container {
+  &__container {
     position: relative;
     height: clamp(275px, 40vw, 400px);
     display: flex;
@@ -344,7 +281,7 @@
     justify-content: center;
   }
 
-  .join__img-bg {
+  &__img-bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -353,19 +290,19 @@
     object-fit: cover;
   }
 
-  .join__content {
+  &__content {
     position: relative;
     z-index: 2;
     padding: 0 20px;
   }
 
-  .join__btn {
+  &__btn {
     @include media-breakpoint-down(sm) {
       width: calc(100vw - 40px);
     }
   }
 
-  .join__text {
+  &__text {
     margin-bottom: clamp(30px, 5vw, 50px);
     text-align: center;
     line-height: 30.47px;
@@ -390,7 +327,7 @@
     padding-bottom: 50px;
   }
 
-  .institution__title {
+  &__title {
     @include media-breakpoint-up(xl) {
       margin-bottom: 60px;
     }
@@ -405,7 +342,7 @@
     }
   }
 
-  .institution__cards {
+  &__cards {
     display: grid;
     margin-bottom: 40px;
 
