--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -9,7 +9,6 @@
   --color-text-primary-25: #100e0e40;
   --color-text-secondary: #ff711f;
   --color-text-3: #100e0e4d;
-
   --color-text-900: #ffffff;
   --color-text-700: #333333;
 
@@ -22,6 +21,7 @@
   --color-bg-700: #4d4d4d;
 
   --color-border: #100e0e1a;
+  --color-border-secondary: #100e0e40;
 
   --color-gray: #dbdbdb;
 
