--- a/src/scss/blocks/filter.scss
+++ b/src/scss/blocks/filter.scss
@@ -4,78 +4,168 @@
   background: white;
   border: 1px solid #0000001a;
 
-  .filter__quantity {
-    padding: 20px 30px;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 31.2px;
-    color: black;
-    opacity: 50%;
+  #checkbox-filter-size {
+    display: none;
+  }
+
+  #checkbox-filter-size:checked ~ &__content {
+    max-height: 0px;
+  }
+
+  #checkbox-filter-size:checked ~ &__header &__header-icon {
+    transform: rotate(180deg);
+  }
+
+  &__header {
     border-bottom: 1px solid #0000001a;
+    color: var(--color-text-black-5);
   }
 
-  .filter__content {
-    padding: 20px 30px 30px 30px;
+  &__header-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    cursor: pointer;
+
+    @include media-breakpoint-up(md) {
+      padding: 20px 30px;
+      pointer-events: none;
+    }
+
+    @include media-breakpoint-down(md) {
+      padding: 20px 20px 13px;
+    }
   }
 
-  .filter__name {
+  &__header-text {
+    font-weight: 500;
+    color: var(--color-text-black-5);
+
+    @include media-breakpoint-up(md) {
+      font-size: 24px;
+      line-height: 31.2px;
+    }
+
+    @include media-breakpoint-down(md) {
+      font-size: 20px;
+      line-height: 26px;
+    }
+  }
+
+  &__header-icon {
+    width: 24px;
+    height: 24px;
+    transition: 0.3s;
+
+    @include media-breakpoint-up(md) {
+      display: none;
+    }
+  }
+
+  &__content {
+    margin: 0 10px;
+    overflow: auto;
+    max-height: 800px;
+    transition: all 0.3s;
+
+    @include media-breakpoint-up(md) {
+      padding: 0 20px;
+    }
+
+    @include media-breakpoint-down(md) {
+      padding: 0 10px;
+    }
+  }
+
+  &__content-text {
     font-weight: 500;
     font-size: 24px;
     line-height: 31.2px;
     color: black;
-    margin-bottom: 25px;
+    padding: 20px 0;
   }
 
-  .filter__items {
+  &__items {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-bottom: 40px;
+    min-height: 100%;
+    padding: 5px 0 15px;
   }
 
-  .filter__item {
+  &__item {
     display: flex;
     gap: 15px;
     align-items: center;
-
-    .filter__checkbox {
-      width: 24px;
-      height: 24px;
-      margin: 0;
-      background: #000;
-    }
-
-    .filter__item-text {
-      font-size: 20px;
-      line-height: 23.44px;
-      color: #100e0e;
-    }
+    cursor: pointer;
   }
 
-  .filter__button-container {
+  &__item-checkbox-false {
+    display: none;
+  }
+
+  &__item-checkbox-true {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    border: 1px solid var(--color-border-secondary);
+  }
+
+  &__item-checkbox-false:checked ~ &__item-checkbox-true {
+    background: #000;
+  }
+
+  &__item-checkbox-icon {
+    width: 14px;
+    height: 14px;
+    color: var(--color-text-900);
+  }
+
+  &__item-text {
+    font-size: 20px;
+    line-height: 23.44px;
+    color: #100e0e;
+  }
+
+  &__buttons {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    border-top: 1px solid var(--color-border);
 
-    .filter__btn-complete,
-    .filter__btn-reset {
-      padding: 15px;
-      font-weight: 500;
-      font-size: 15px;
-      line-height: 10.5px;
-      letter-spacing: 3%;
-      text-transform: uppercase;
-      border: 2px solid #100e0e;
+    @include media-breakpoint-up(md) {
+      padding: 30px;
     }
 
-    .filter__btn-complete {
-      background: #100e0e;
-      color: white;
+    @include media-breakpoint-down(md) {
+      padding: 20px;
     }
+  }
 
-    .filter__btn-reset {
-      background: white;
-      color: #100e0e;
-    }
+  &__button-complete,
+  &__button-reset {
+    padding: 15px;
+    border: 2px solid var(--color-text-primary);
+  }
+
+  &__button-complete {
+    background: var(--color-text-primary);
+    color: var(--color-text-900, #ffffff);
+  }
+
+  &__button-reset {
+    background: var(--color-text-900, #ffffff);
+    color: var(--color-text-primary);
+  }
+
+  &__button-text {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 10.5px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
   }
 }
